[tool.poetry]
name = "namez"
version = "0.1.0"
homepage = "https://github.com/shawwn/namez"
description = "A package for accessing objects by name"
authors = ["Shawn Presser"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
python-semantic-release = "^7.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
