[tool.poetry]
name = "namez"
version = "0.1.1"
homepage = "https://github.com/shawwn/namez"
description = "A package for accessing objects by name"
authors = ["Shawn Presser"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
python-semantic-release = "^7.24.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
pre_commit_command = "poetry build --format sdist; tar -xvf dist/*-`poetry version -s`.tar.gz -O '*/setup.py' > setup.py"
include_additional_files = "setup.py"
major_on_zero = false
